[gd_scene load_steps=12 format=2]

[ext_resource path="res://Ressourcen/Basic/Textures/Black.png" type="Texture" id=1]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/Oswald-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Ressourcen/Basic/Textures/TextBox.png" type="Texture" id=3]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontIngame.tres" type="DynamicFont" id=4]
[ext_resource path="res://Ressourcen/Basic/Sounds/Bling.ogg" type="AudioStream" id=5]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/HUD.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 0 ), Vector2( 5, -20 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, -20 ), Vector2( 5, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Speed" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -304.781
margin_top = -50.2544
margin_right = -11.7805
margin_bottom = -1.25439
grow_horizontal = 0
custom_fonts/font = SubResource( 6 )
text = "Speed"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 152.0

[node name="Label" type="Label" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 225.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Welcome in Hainfurt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 3 )
anims/FadeOut = SubResource( 4 )

[node name="Bling" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Pause"]
modulate = Color( 1, 1, 1, 0.564706 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -100.0
margin_right = 107.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause/HBox"]
margin_right = 214.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
text = "Pause"
align = 1

[node name="Back" type="Button" parent="Pause/HBox"]
margin_top = 64.0
margin_right = 214.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 4 )
text = "Back"

[node name="Quit" type="Button" parent="Pause/HBox"]
margin_top = 134.0
margin_right = 214.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 4 )
text = "Quit"

[node name="TextBox" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TextBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TextBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.0
margin_top = -257.0
margin_right = 412.0
margin_bottom = 164.0
focus_mode = 2
custom_fonts/normal_font = SubResource( 5 )
text = "Test Test meine Freunde"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="Button" parent="TextBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 189.105
margin_right = 50.0
margin_bottom = 225.105
rect_min_size = Vector2( 100, 36 )
custom_fonts/font = ExtResource( 4 )
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Pause/HBox/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Pause/HBox/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="TextBox/Ok" to="." method="_on_OkTextBox_pressed"]
